# genesis-sync-accelerator

./: .gitignore  CONTRIBUTING.md  README.md  cabal.project  flake.nix  genesis-sync-accelerator.cabal  run_accelerator.sh  using-an-accelerator.md
.github/workflows/: integration-test.yml
app/: Main.hs
chunk-uploader/: README.md  chunk-uploader.cabal
chunk-uploader/app/: Main.hs
chunk-uploader/src/: ChunkUploader.hs
chunk-uploader/src/ChunkUploader/: Detection.hs  S3.hs  State.hs  Types.hs
chunk-uploader/test/: Main.hs
chunk-uploader/test/Test/ChunkUploader/: Detection.hs  S3.hs  State.hs  Types.hs
doc/: chunk-uploader.md  hosting-a-gsa.md  performance-report.md
nix/: ci.nix  formatting-linting.nix  haskell.nix  shell.nix
src/GenesisSyncAccelerator/: Config.hs  Diffusion.hs  MiniProtocols.hs  OnDemand.hs  RemoteStorage.hs  Tracing.hs  Util.hs
src/gsa-testlib/Test/GenesisSyncAccelerator/: Types.hs  Utilities.hs
test/: lib.sh
test/bench/: README.md  extract-features.sh  join-dataset.py  parse-timing.awk  plot-sync-rate.py  plot.py  run-local.sh  sweep-matrix.sh  sweep-pipeline.sh  sync-bench.sh
test/bench/analysis/bandwidth-headroom/: sweep-matrix-pipelined.csv  sweep-pipeline.csv
test/benchmark/: README.md  lib.sh  provision.sh  report.sh  run-phase1.sh  run-phase2.sh  setup-instance.sh  teardown.sh  validate.sh
test/benchmark/systemd/: cardano-node@.service  chunk-uploader.service  gsa.service
test/benchmark/terraform/: cloud-init.yaml  ec2.tf  iam.tf  main.tf  network.tf  outputs.tf  s3.tf  variables.tf
test/cdn/: lib.sh  run-test.sh
test/config/: Main.hs
test/config/Test/GenesisSyncAccelerator/: Config.hs
test/data/config/: topology.json
test/download/: Main.hs
test/download/Test/GenesisSyncAccelerator/: Download.hs
test/download/Test/GenesisSyncAccelerator/Download/: Chunks.hs  RemoteTip.hs  Retry.hs
test/integration/: README.md  chain-init.sh  config.yaml  lib.sh  run-test.sh  run-uploader-test.sh
test/integration/config/: config.json  consumer-config.json  consumer-topology.json  topology.json
test/on-demand/: Main.hs
test/on-demand/Test/GenesisSyncAccelerator/: OnDemandRuntime.hs
test/on-demand/Test/GenesisSyncAccelerator/OnDemand/: EnsureChunks.hs  Iteration.hs  Runtime.hs
tools/: block-features.hs  gsa-bench.hs  immdb-get-tip.hs
